# polytread

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
documents/: ARCHITECTURE.md  CONFIGURATION.md  DASHBOARD_GUIDE.md  GETTING_STARTED.md  OPERATIONS.md
npm/: README.md  package.json
npm/scripts/: install.js
scripts/: dashboard-guide-fixture.py  polytread.env.example  polytread.service  render-setup-gallery.ps1  run_polytread.sh  verify.ps1  verify.sh
src/: app.rs  config.rs  connectivity.rs  consumer.rs  discovery.rs  dns_remediation.rs  history.rs  local_control.rs  main.rs  portfolio.rs  runtime_ui.rs  runtime_ui_gallery.rs  setup_ui.rs  setup_ui_gallery.rs  state.rs  trading.rs  ws_dashboard.rs
src/feeds/: binance_spot.rs  market.rs  mod.rs  rtds_chainlink.rs
web/: dashboard.html
