[package]
name = "polytread"
version = "0.2.0"
edition = "2024"
rust-version = "1.97"
description = "Lightweight browser-backed Polymarket BTC five-minute trading service"
license = "MIT OR Apache-2.0"
publish = false
autobins = false

[[bin]]
name = "polytread"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.7", default-features = false, features = ["contract", "provider-http", "reqwest-rustls-tls", "signer-local"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
futures-util = "0.3"
indicatif = "0.18"
keyring = "4.1"
polymarket_client_sdk_v2 = { version = "0.6.0", features = ["clob", "ws"] }
reqwest = { version = "0.13", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls"] }
rpassword = "7.4"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3.13"
